Fix scrollbar layout shift

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -3,6 +3,7 @@ html {
     max-width: 800px;
     background-color: var(--background-color);
     color: var(--text-color);
+    scrollbar-gutter: stable both-edges;
 }
 
 body {
